<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.MainActivity"
    android:background="@color/colorBackground">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:id="@+id/imageLogin"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeText"
        android:id="@+id/welcomeText"
        android:layout_below="@id/imageLogin"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="22sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginText"
        android:hint="@string/loginText"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_person"
        android:layout_below="@id/welcomeText"
        android:layout_centerHorizontal="true"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:hint="@string/pwdText"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/connexionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connexionButtonText"
        android:textSize="20sp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_below="@+id/passwordLayout"
        android:textColor="@color/white"
        android:background="@color/colorButton"
        android:layout_marginTop="15dp">
    </Button>

</LinearLayout>