<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchAddVille"
        android:textSize="20sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/addVille"
        android:paddingBottom="15dp"
        android:gravity="center"/>

    <SearchView
        android:id="@+id/searchViewVille"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/searchAddVille">
    </SearchView>

    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:background="@color/colorButton"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnView"
        android:text="@string/mesVilles"
        android:layout_below="@+id/searchViewVille"/>

    <ProgressBar
        android:id="@+id/progressBarAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnView"/>
    <TextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnView"
        android:id="@+id/textWarningRechercheAdd"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:text="@string/warning"
        android:gravity="center"/>

    <TextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnView"
        android:id="@+id/notFoundAdd"
        android:textSize="26sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/notFound"/>

    <ListView
        android:id="@+id/listViewSearchAddVille"
        android:paddingTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/searchViewVille"
        android:layout_marginTop="25dp"
        android:dividerHeight="5dp"
        android:divider="#E6E6E6"/>

</RelativeLayout>
